--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Sofía Escobar
 description: UX Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/sssofia/isofiaescobar/master/images/yomerengues.jpg
 
 #
 # Flags below are optional
