--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Sofía Escobar
 description: UX Developer ⚡
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/sssofia/isofiaescobar/master/images/yomerengues.jpg
+avatar: https://raw.githubusercontent.com/sssofia/sofiaescobar/master/images/yomerengues.jpg
 
 #
 # Flags below are optional
@@ -41,13 +41,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://sssofia.github.io/isofiaescobar
+url: https://sssofia.github.io/sofiaescobar
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://sssofia.github.io/isofiaescobar"
+baseurl: "https://sssofia.github.io/sofiaescobar"
 
 #
 # !! You don't need to change any of the configuration flags below !!
