--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/sssofia/sofiaescobar/master/images/yom
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: escobar.isofia@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
