--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/sssofia/sofiaescobar/master/images/yom
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: escobar.isofia@gmail.com
+  email: 
   facebook:
   flickr:
   github: 
